# simple-mongo

./: Cargo.toml  README.md  test.rs
src/: lib.rs  structures.rs  traits.rs
src/structures/: credentials.rs  options.rs
