[package]
name = "simple-mongo"
version = "0.1.1"
authors = ["Giuseppe Gravante"]
description = "A simple MongoDB wrapper for Rust"
edition = "2024"
readme = "README.md"
keywords = ["mongodb", "database", "wrapper"]
repository = "https://github.com/Giuseppe7887/simple-mongo"
documentation = "https://github.com/Giuseppe7887/simple-mongo/blob/main/README.md"
license = "MIT OR Apache-2.0"
categories = ["database"]

[dependencies]
futures = "0.3.31"
mongodb = "3.2.1"
serde = {version="1.0.218", features =["derive"]}
tokio = { version = "1.43.0", features = ["full"] }
